--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,3 @@
 languageCode = "en-us"
-title = "My New Hugo Site"
-baseurl = "http://example.org/"
+title = "Tony Lawrence"
+baseurl = "http://tonylawrence.com"
